Transform-origin on SVG breaks when zoom in or out https://bugs.webkit.org/show_bug.cgi?id=194903

Reviewed by Simon Fraser.

Since <https://commits.webkit.org/24834@main>, WebKit handles page
zoom and zoom CSS property by embedding them into CSS length. However,
WebKit doesn't do that for SVG. So, WebKit should resolve length
properties differently for HTML and SVG.

However, transform property was resolved by taking zoom factor into
account even for SVG. <https://commits.webkit.org/149452@main> was a
previous attempt to fix the bug. But, it was wrong because it just
clobbered the translation in the matrix.

Style::BuilderConverter should use a different
CSSToLengthConversionData for SVG elements.

* LayoutTests/svg/zoom/page/transform-origin-and-zoom-expected.html: Added.
* LayoutTests/svg/zoom/page/transform-origin-and-zoom.html: Added.
* Source/WebCore/style/StyleBuilderConverter.h:
(WebCore::Style::BuilderConverter::convertTransform):
(WebCore::Style::BuilderConverter::convertTranslate):
* Source/WebCore/svg/SVGGraphicsElement.cpp:
(WebCore::SVGGraphicsElement::animatedLocalTransform const):

Canonical link: https://commits.webkit.org/281265@main